--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cell spacing = "20">
     <tr>
     <td>
-       <img src = "IMAGES/nithin.png.jpg" alt = "Image" >
+       <img src = "nithin.png.jpg" alt = "Image" >
      </td>
      <td>
        <h1>Nithin Kumar</h1>
